# spamix-information-verification-agent-

./: .gitignore  main.py  prototype.py  pyproject.toml  requirements.txt  streamlit_app.py
agents/: agents.py  llms.py  processor.py  prompt.py
application_agent/: .env  my_telegram_session.session  reddit.py  requirements.txt  telegram.py
mcp_server/: agent.py  client.py  mcp_server.py
mcp_server/config/: settings.py
mcp_server/tools/: tools_registry.py
mcp_server/tools/tools/: fact_checker.py  google_safe_browsing.py  research_tool.py  urlscan.py  virustotal.py
